# jerry-bot

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  app.py  config.md  database.py  docker-compose.yml  dockerfile  downreport.py  framework.toml  jerry.py  pyproject.toml  requirements.txt  run.py  self-talk.py
.github/: dependabot.yml
.github/workflows/: build-and-deploy.yml  create_image.yml  docker_build.yml  legacy_docker.yml  legacy_docker_build.yml
.zed/: settings.json
core/: __init__.py  core.py  db.py  shell.py
experimental/: basic-gemini.py  spacebin.py
scripts/: build.sh  dev_env.sh  init.sh  local_docker.sh  make_plugin.py  quit.sh  redis.sh  run.sh  update_core.sh
src/: app.py  jerry.py
src/cogs/: __init__.py  auto_reply.py  auto_reply_legacoy.py  gemini.py  guild_stuff.py  information_channels.py  legacy_stickers.py  mqtt.py  simple_update.py  static_commands.py  stickers.py  vc.py
src/cogs/gemini/: __init__.py  ai.py  ai_types.py  config.py  constants.py  core.py  files.py  gemini-old.py  memory.py  methods.py  prompts.py  providers.py
src/cogs/music/: __init__.py  config.py  core.py  db.py  downloader.py  interactions.py  player.py  schema.py  types.py
src/jerry_bot/: __init__.py  main.py
src/jerry_bot/plugins/: __init__.py
src/jerry_bot/plugins/activity_roles/: __init__.py  activity.py  plugin.py  plugin.toml
src/jerry_bot/plugins/activity_roles/models/: dataclasses.py  db.py
src/jerry_bot/plugins/auto_embed/: __init__.py  interactions.py  plugin.py  plugin.toml
src/jerry_bot/plugins/auto_reply/: __init__.py  ar.py  cli_handler.py  cog.py  editor.py  globals.py  help.py  jinja_manager.py  plugin.py  plugin.toml  response_handler.py  search.py  ui.py
src/jerry_bot/plugins/auto_reply/models/: __init__.py  db.py  enums.py
src/jerry_bot/plugins/auto_reply/ui/: __init__.py  common.py  constants.py  editor.py  main.py  search.py
src/jerry_bot/plugins/commands/: __init__.py  constants.py  plugin.py  plugin.toml
src/jerry_bot/plugins/gemini/: __init__.py  constants.py  function_calls.py  gemini.py  instance.py  plugin.py  plugin.toml
src/jerry_bot/plugins/gemini/config/: __init__.py  config.example.yaml  global_config.py  manager.py  provider_config.py
src/jerry_bot/plugins/gemini/core/: __init__.py  constants.py  context.py  conversation.py  conversation_engine.py  factory.py  manager.py  message_processor.py  message_queue.py  session.py  turn_engine.py  ui_service.py
src/jerry_bot/plugins/gemini/dc_chat/: __init__.py  context_generator.py  input_processor.py  message_render.py  stream_send.py
src/jerry_bot/plugins/gemini/dc_config/: __init__.py  channel_modal.py  cog.py  handlers.py  llm_profile_modal.py  menu.py  renderers.py  state_enums.py  utils.py
src/jerry_bot/plugins/gemini/input/: __init__.py  context_generator.py  message_render.py
src/jerry_bot/plugins/gemini/interactions/: __init__.py  channel_editor.py  cog.py  model_editor.py  utils.py
src/jerry_bot/plugins/gemini/models/: __init__.py  channel.py  config.py  context.py  database.py  enums.py  llm.py  (+6 more)
src/jerry_bot/plugins/music/: __init__.py  cog.py  config.py  downloader.py  imports.py  interactions.py  models.py  player.py  plugin.py  plugin.toml  queue.py  ui.py  views.py
src/jerry_bot/plugins/poll_roles/: __init__.py  cog.py  manager_protocol.py  models.py  plugin.py  plugin.toml  ui.py
src/jerry_bot/plugins/simple_games/: __init__.py  plugin.py  plugin.toml  rps.py  tic_tac_toe.py
src/jerry_bot/plugins/support_threads/: __init__.py  constants.py  plugin.py  plugin.toml  thread.py
(+22 files in other folders)
