[project]
name = "jerry-bot"
version = "0.1.0"
description = "A (not so) simple Discord bot"
authors = [
    { name = "squid1127", email = "120748767+squid1127@users.noreply.github.com." },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11, <3.14"

dependencies = [
    "aiohttp",                                                           # Plugin: Commands
    "beautifulsoup4",                                                    # Plugin: Commands
    "yt-dlp",                                                            # Plugin: Music
    "spotdl>=4.4.3",                                                # Plugin: Music
    "discord.py[voice]",                                               # Voice support
    "squid-core @ git+https://github.com/squid1127/squid-core.git@main",
    "google-genai", # Plugin: Gemini
    "semantic-text-splitter", # Plugin: Gemini
    "jinja2", # Plugin: Auto Reply - Text Template
    "asteval", # Plugin: Auto Reply - Math Evaluation
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
